compiler/testData/diagnostics/testsWithStdLib/properties/backingField/explicitBackingFieldInConstProperty.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: +ExplicitBackingFields

<!CONST_VAL_WITH_EBF!>const<!> val p1: Any
    field = 42

/* GENERATED_FIR_TAGS: const, explicitBackingField, integerLiteral, propertyDeclaration, unsignedLiteral */
